# learning-ai

./: .env.example  README.md  pyproject.toml
01-HelloLLM/: 01-hello-deepseek-v3.py  02-hello-deepseek-r1.py  03-models-list.py  04-stream.py  05-reason-stream.py  06-multi-chats.py  07-multi-chats-stream.py  08-embedding.py  08-model-params.py  README.md
02-Advanced-Chat/: 01-chat-prefix-completion.py  02-FIM-completion.py  03-JSON-Output.py  04-Function-Calling.py  04-Funtion-Calling.py  README.md
03-Function-Calling/: 01-FC-get-weather.py  02-FC-multi-get-weather.py  03-FC-python-repl.py  README.md
04-Multi-Modal/: 01-vision.py  02-vision-detail-level.py  03-vision-multi-images.py  04-DALLE.py  05-TTS.py  06-Whisper.py
05-app/: 01-summary.py  02-redbook.py  03-classification.py
06-app-server/: .env.example  README.md  requirements.txt
06-app-server/app/: __init__.py  main.py
06-app-server/app/api/v1/: __init__.py  chat.py  redbook.py  summary.py  weather.py
06-app-server/app/core/: config.py
07-Rag/: 01_document_processor.py  02_embedding_processor.py  README.md
07-Rag/02-Rag-Demo/: README.md  document_processor.py  embedding_processor.py  generation_processor.py  main.py  query_processor.py  rerank_processor.py
07-Rag/02-Rag-Demo/data/: hangzhou_attractions.txt
07-Rag/data/: embeddings.data  embeddings.index  test.txt
